frontend/target/wasm32-unknown-unknown/debug/build/anyhow-32c54cbb2cac2923/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/Jordan/workspace/421project3/frontend/target/wasm32-unknown-unknown/debug/build/anyhow-32c54cbb2cac2923/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
